# recipes-forum

./: README.md
server/: .gitignore  Dockerfile  db.sql  pyproject.toml  setup.cfg
server/app/: main.py  models.py  redis.py
server/app/api/: deps.py  router.py
server/app/api/endpoints/: auth.py  likes.py  live.py  me.py  recipes.py
server/app/core/: __init__.py  config.py
server/app/schemas/: auth.py  pagination.py  recipe.py  responses.py  user.py
server/app/utils/: auth.py  img.py  jwt.py  orm_extras.py  sql_helpers.py
web/: .env  .env.dev  .env.prod  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
web/src/SpecialFunctions/: BuildRecipe.ts  SeparateRecipe.ts
web/src/auth/: index.ts
web/src/auth/context/: AuthContext.tsx
web/src/auth/providers/: AuthProvider.tsx  PermProvider.tsx  index.ts
web/src/auth/types/: AuthProps.ts  User.ts
web/src/components/: Dashboard.tsx  Navbar.tsx  index.ts
web/src/components/Auth/: Login.tsx  Register.tsx  index.ts
web/src/components/RecipeLists/: EnVivo.tsx  MostVoted.tsx  Recientes.tsx
web/src/components/Screens/: EditRecipe.tsx  Favoritos.tsx  MisRecetas.tsx  Perfil.tsx  SingleRecipe.tsx
web/src/components/Ui/: CustomSnackbar.tsx  MyRecipe.tsx  (+2 more)
web/src/interfaces/: Recipe.ts  RenderedRecipe.ts  User.ts
web/src/placeHolders/: DashboardCards.ts
web/src/router/: AppRouter.tsx  ProtectedRoute.tsx
web/src/services/: base-services.ts  index.ts  services.ts
web/src/styles/: auth.css  customRules.css  navbar.css
(+4 files in other folders)
