[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rodrigo Castrejon <47370853+rcastrejon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
autoflake = "^1.7.6"
flake8 = "^5.0.4"
mypy = "^0.982"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
